<resources>
    <string name="app_name">Rainbow</string>
    <string name="hello_world">Hello world!</string>
    <string name="id_btn_gateway_in">网关入网</string>
    <string name="id_btn_con_gateway">连接网关</string>
    <string name="action_settings">Settings</string>
    <string name="menu">协议类型</string>
    <string name="id_btn_client">TCP Client</string>
    <string name="id_btn_server">TCP Server</string>
    <string name="gateway_id">\网关ID</string>
    <string name="id_gateway">空</string>
    <string name="btn_comm"> </string>
    <string name="ip_add">服务器IP地址:</string>
    <string name="socket_address">地址列表:</string>
    <string name="ip">192.168.0.104</string>
    <string name="server_port">端口:</string>
    <string name="btn_comm1">DO1常开</string>
    <string name="btn_comm2">DO2常开</string>
    <string name="btn_comm3">DO3常开</string>
    <string name="btn_comm4">DO4常开</string>
    <string name="btn_comm5">DO5常开</string>
    <string name="btn_comm6">DO6常开</string>
    <string name="btn_comm7">DO7常开</string>
    <string name="btn_comm8">DO8常开</string>
    <string name="btn_DI_1">DI1:0</string>
    <string name="btn_DI_2">DI2:0</string>
    <string name="btn_DI_3">DI3:0</string>
    <string name="btn_DI_4">DI4:0</string>
    <string name="btn_HDI_1">DI1高:0</string>
    <string name="btn_HDI_2">DI2高:0</string>
    <string name="btn_HDI_3">DI3高:0</string>
    <string name="btn_HDI_4">DI4高:0</string>
    id_btn_HDI_3
    <string name="btn_addIP">添加</string>
    <string name="btn_applyIP">使用</string>
    <string name="title_ip">IP设置</string>
    <string name="btn_deleteIP">删除</string>
</resources>
